--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview"
+    "start": "vite preview --port 10000"
   },
   "dependencies": {
     "@geist-ui/core": "^2.3.8",
